# veigar

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README_CN.md
cmake/: msvc_support.cmake
examples/echo/: CMakeLists.txt  main.cpp  thread_group.h
examples/performance-test/: CMakeLists.txt  main.cpp  meter.h  thread_group.h
include/veigar/: call_dispatcher.h  call_dispatcher.inl  call_result.h  config.h  dispatcher.h  dispatcher.inl  msgpack.hpp  veigar.h  veigar.inl
include/veigar/detail/: all.h  any.h  bool.h  call.h  constant.h  func_tools.h  func_traits.h  if.h  invoke.h  make_unique.h  meter.h  response.h
include/veigar/msgpack/: assert.hpp  cpp_config.hpp  cpp_config_decl.hpp  cpp_version.hpp  create_object_visitor.hpp  create_object_visitor_decl.hpp  fbuffer.hpp  fbuffer_decl.hpp  gcc_atomic.hpp  iterator.hpp  iterator_decl.hpp  meta.hpp  meta_decl.hpp  null_visitor.hpp  null_visitor_decl.hpp  object.hpp  object_decl.hpp  object_fwd.hpp  object_fwd_decl.hpp  pack.hpp  pack_decl.hpp  parse.hpp  parse_decl.hpp  parse_return.hpp  predef.h  preprocessor.hpp  sbuffer.hpp  sbuffer_decl.hpp  sysdep.hpp  type.hpp  unpack.hpp  unpack_decl.hpp  unpack_define.hpp  unpack_exception.hpp  version.hpp  version_master.hpp  versioning.hpp  vrefbuffer.hpp  vrefbuffer_decl.hpp  x3_parse.hpp  (+7 more)
include/veigar/msgpack/adaptor/: adaptor_base.hpp  adaptor_base_decl.hpp  array_ref.hpp  array_ref_decl.hpp  bool.hpp  carray.hpp  char_ptr.hpp  check_container_size.hpp  check_container_size_decl.hpp  complex.hpp  define.hpp  define_decl.hpp  deque.hpp  ext.hpp  ext_decl.hpp  fixint.hpp  fixint_decl.hpp  float.hpp  int.hpp  int_decl.hpp  list.hpp  map.hpp  map_decl.hpp  msgpack_tuple.hpp  msgpack_tuple_decl.hpp  nil.hpp  nil_decl.hpp  pair.hpp  raw.hpp  raw_decl.hpp  set.hpp  size_equal_only.hpp  size_equal_only_decl.hpp  string.hpp  v4raw.hpp  v4raw_decl.hpp  vector.hpp  vector_bool.hpp  vector_char.hpp  vector_unsigned_char.hpp  (+1 more)
include/veigar/msgpack/adaptor/boost/: fusion.hpp  msgpack_variant.hpp  msgpack_variant_decl.hpp  optional.hpp  string_ref.hpp  string_view.hpp
include/veigar/msgpack/adaptor/cpp11/: array.hpp  array_char.hpp  array_unsigned_char.hpp  chrono.hpp  forward_list.hpp  reference_wrapper.hpp  shared_ptr.hpp  timespec.hpp  tuple.hpp  unique_ptr.hpp  unordered_map.hpp  unordered_set.hpp
include/veigar/msgpack/adaptor/cpp17/: array_byte.hpp  byte.hpp  carray_byte.hpp  optional.hpp  string_view.hpp  variant.hpp  vector_byte.hpp
include/veigar/msgpack/adaptor/cpp20/: span.hpp
include/veigar/msgpack/adaptor/tr1/: unordered_map.hpp  unordered_set.hpp
include/veigar/msgpack/predef/: architecture.h  compiler.h  hardware.h  language.h  library.h  make.h  os.h  other.h  platform.h  version.h
include/veigar/msgpack/predef/architecture/: alpha.h  arm.h  blackfin.h  convex.h  ia64.h  m68k.h  mips.h  parisc.h  ppc.h  ptx.h  pyramid.h  rs6k.h  sparc.h  superh.h  sys370.h  sys390.h  x86.h  z.h
include/veigar/msgpack/predef/compiler/: borland.h  clang.h  comeau.h  compaq.h  diab.h  digitalmars.h  dignus.h  edg.h  ekopath.h  gcc.h  gcc_xml.h  greenhills.h  hp_acc.h  iar.h  ibm.h  intel.h  kai.h  llvm.h  metaware.h  metrowerks.h  microtec.h  mpw.h  (+8 more)
include/veigar/msgpack/preprocessor/: arithmetic.hpp  array.hpp  assert_msg.hpp  cat.hpp  comma.hpp  comma_if.hpp  comparison.hpp  control.hpp  debug.hpp  dec.hpp  empty.hpp  enum.hpp  enum_params.hpp  enum_params_with_a_default.hpp  enum_params_with_defaults.hpp  enum_shifted.hpp  enum_shifted_params.hpp  expand.hpp  expr_if.hpp  facilities.hpp  for.hpp  identity.hpp  if.hpp  inc.hpp  iterate.hpp  iteration.hpp  library.hpp  limits.hpp  list.hpp  logical.hpp  max.hpp  min.hpp  punctuation.hpp  repeat.hpp  repeat_2nd.hpp  repeat_3rd.hpp  repeat_from_to.hpp  repeat_from_to_2nd.hpp  repeat_from_to_3rd.hpp  repetition.hpp  (+8 more)
include/veigar/msgpack/v1/: cpp_config.hpp  cpp_config_decl.hpp  fbuffer.hpp  fbuffer_decl.hpp  iterator.hpp  iterator_decl.hpp  meta.hpp  meta_decl.hpp  object.hpp  object_decl.hpp  object_fwd.hpp  object_fwd_decl.hpp  pack.hpp  pack_decl.hpp  parse_return.hpp  sbuffer.hpp  sbuffer_decl.hpp  unpack.hpp  unpack_decl.hpp  unpack_exception.hpp  version.hpp  versioning.hpp  vrefbuffer.hpp  vrefbuffer_decl.hpp  zbuffer.hpp  zbuffer_decl.hpp  zone.hpp  zone_decl.hpp
include/veigar/msgpack/v2/: cpp_config_decl.hpp  create_object_visitor.hpp  create_object_visitor_decl.hpp  fbuffer_decl.hpp  iterator_decl.hpp  meta_decl.hpp  null_visitor.hpp  null_visitor_decl.hpp  object.hpp  object_decl.hpp  object_fwd.hpp  object_fwd_decl.hpp  pack_decl.hpp  parse.hpp  parse_decl.hpp  parse_return.hpp  sbuffer_decl.hpp  unpack.hpp  unpack_decl.hpp  vrefbuffer_decl.hpp  x3_parse.hpp  x3_parse_decl.hpp  x3_unpack.hpp  x3_unpack_decl.hpp  zbuffer_decl.hpp  zone_decl.hpp
include/veigar/msgpack/v3/: cpp_config_decl.hpp  create_object_visitor_decl.hpp  fbuffer_decl.hpp  iterator_decl.hpp  meta_decl.hpp  null_visitor_decl.hpp  object_decl.hpp  object_fwd.hpp  object_fwd_decl.hpp  pack_decl.hpp  parse.hpp  parse_decl.hpp  parse_return.hpp  sbuffer_decl.hpp  unpack.hpp  unpack_decl.hpp  vrefbuffer_decl.hpp  x3_parse_decl.hpp  x3_unpack.hpp  x3_unpack_decl.hpp  zbuffer_decl.hpp  zone_decl.hpp
py/: msgpack.py
src/: CMakeLists.txt  boost_itp.h  call_dispatcher.cpp  dispatcher.cpp  event.cpp  event.h  log.cpp  log.h  message_queue.cpp  message_queue.h  mutex.cpp  mutex.h  name_manager.cpp  name_manager.h  os_platform.h  resp_dispatcher.cpp  resp_dispatcher.h  response.cpp  run_time_recorder.cpp  run_time_recorder.h  semaphore.cpp  semaphore.h  sender.cpp  sender.h  shared_memory.cpp  shared_memory.h  string_helper.cpp  string_helper.h  time_util.cpp  time_util.h  uuid.cpp  uuid.h  veigar.cpp
tests/: CMakeLists.txt  bind_test.cpp  call_test.cpp  event.cpp  event.h  main.cpp  message_queue_test.cpp  meter_test.cpp  mutex_test.cpp  semaphore_test.cpp  shm_test.cpp  t_bind.cpp  t_init_uninit.cpp  t_inprocess_call.cpp  t_outprocess_call.cpp  t_semaphore.cpp  test.cpp  thread_group.h  type_test.cpp
tests/other/: CMakeLists.txt  main.cpp
(+407 files in other folders)
